# syntherm

./: CMakeLists.txt  README.md  midiin.cpp
src/: audioout.hpp  callback.hpp  callbacks.hpp  envelope.hpp  envelopes.hpp  main.cpp  midiin.hpp  midiparser.hpp  notebundle.hpp  oscilator.hpp  sinwave.hpp  soundout.hpp  types_and_constants.hpp  voice.hpp  voicemanager.hpp
src/rtshit/: audioout.hpp  midiparser.hpp  notebundle.hpp
src/utils/: envelope.hpp  types_and_constants.hpp
